Fixing button spacing issue

--- a/app/assets/stylesheets/panamax/template.css.scss
+++ b/app/assets/stylesheets/panamax/template.css.scss
@@ -127,6 +127,10 @@
       margin-left: 100px;
       width: 500px;
     }
+
+    button {
+     margin-top: 0;
+    }
   }
 
   .button-secondary {
